--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: "FreeRADIUS Add-on Repo"
-url: "https://github.com/TU_USUARIO/ha-freeradius-addon"
-maintainer: "TU_NOMBRE"
+url: "https://github.com/josearv/ha-freeradius-addon"
+maintainer: "Jose A Romero"
