--- a/freeradius_local/config.yaml
+++ b/freeradius_local/config.yaml
@@ -1,7 +1,7 @@
-name: "FreeRADIUS Local"
+name: "FreeRADIUS Local JAR"
 slug: "freeradius_local"
 description: "FreeRADIUS server (PEAP/MSCHAPv2) for WPA2-Enterprise / 802.1X"
-version: "1.0.4"
+version: "1.0.5"
 url: "https://github.com/josearv/ha-freeradius-addon"
 startup: services
 boot: auto
