--- a/freeradius_local/config.yaml
+++ b/freeradius_local/config.yaml
@@ -34,6 +34,7 @@ options:
   users:
     - username: usuario1
       password: "CAMBIAME"
+      vlan: 1
 
 schema:
   clients:
@@ -43,6 +44,7 @@ schema:
   users:
     - username: str
       password: str
+      vlan: int
 
 map:
   - config:rw
