--- a/freeradius_local/config.yaml
+++ b/freeradius_local/config.yaml
@@ -1,7 +1,7 @@
 name: "FreeRADIUS Local JAR"
 slug: "freeradius_local"
 description: "FreeRADIUS server (PEAP/MSCHAPv2) for WPA2-Enterprise / 802.1X"
-version: "1.1.6"
+version: "1.1.7"
 url: "https://github.com/josearv/ha-freeradius-addon"
 startup: services
 boot: auto
@@ -27,20 +27,28 @@ ports:
   1813/udp: 1813
 
 options:
+  # Parchea /etc/raddb/mods-enabled/eap para poner use_tunneled_reply = yes
+  # Necesario para que la VLAN dinámica (Tunnel-Private-Group-Id) salga en el sitio correcto en PEAP.
+  use_tunneled_reply: true
+
   clients:
     - name: ap
       ipaddr: 192.0.2.10
       secret: "CAMBIAME"
+
   users:
     - username: usuario1
       password: "CAMBIAME"
       vlan: 1
 
 schema:
+  use_tunneled_reply: bool?
+
   clients:
     - name: str
       ipaddr: str
       secret: str
+
   users:
     - username: str
       password: str
